// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
.emotion-35 {
  border-collapse: separate;
  text-align: center;
  line-height: 1.5rem;
  width: 100%;
  border-spacing: 0 0.25rem;
}

.emotion-35 th {
  width: 2rem;
  padding: 0.25rem 0;
}

.emotion-35 tr td:first-child {
  border-top-left-radius: 10%;
  border-bottom-left-radius: 10%;
}

.emotion-35 tr td:last-child {
  border-top-right-radius: 10%;
  border-bottom-right-radius: 10%;
}

.emotion-0 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
}

.emotion-0:hover {
  cursor: pointer;
  background: #F0F0F5;
}

<div>
  <table
    class="emotion-35"
  >
    <thead>
      <tr>
        <th>
          S
        </th>
        <th>
          M
        </th>
        <th>
          T
        </th>
        <th>
          W
        </th>
        <th>
          T
        </th>
        <th>
          F
        </th>
        <th>
          S
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          data-date="2018-09-30"
        >
          <span
            class="emotion-0"
            role="button"
          >
            30
          </span>
        </td>
        <td
          data-date="2018-10-01"
        >
          <span
            class="emotion-0"
            role="button"
          >
            01
          </span>
        </td>
        <td
          data-date="2018-10-02"
        >
          <span
            class="emotion-0"
            role="button"
          >
            02
          </span>
        </td>
        <td
          data-date="2018-10-03"
        >
          <span
            class="emotion-0"
            role="button"
          >
            03
          </span>
        </td>
        <td
          data-date="2018-10-04"
        >
          <span
            class="emotion-0"
            role="button"
          >
            04
          </span>
        </td>
        <td
          data-date="2018-10-05"
        >
          <span
            class="emotion-0"
            role="button"
          >
            05
          </span>
        </td>
        <td
          data-date="2018-10-06"
        >
          <span
            class="emotion-0"
            role="button"
          >
            06
          </span>
        </td>
      </tr>
      <tr>
        <td
          data-date="2018-10-07"
        >
          <span
            class="emotion-0"
            role="button"
          >
            07
          </span>
        </td>
        <td
          data-date="2018-10-08"
        >
          <span
            class="emotion-0"
            role="button"
          >
            08
          </span>
        </td>
        <td
          data-date="2018-10-09"
        >
          <span
            class="emotion-0"
            role="button"
          >
            09
          </span>
        </td>
        <td
          data-date="2018-10-10"
        >
          <span
            class="emotion-0"
            role="button"
          >
            10
          </span>
        </td>
        <td
          data-date="2018-10-11"
        >
          <span
            class="emotion-0"
            role="button"
          >
            11
          </span>
        </td>
        <td
          data-date="2018-10-12"
        >
          <span
            class="emotion-0"
            role="button"
          >
            12
          </span>
        </td>
        <td
          data-date="2018-10-13"
        >
          <span
            class="emotion-0"
            role="button"
          >
            13
          </span>
        </td>
      </tr>
      <tr>
        <td
          data-date="2018-10-14"
        >
          <span
            class="emotion-0"
            role="button"
          >
            14
          </span>
        </td>
        <td
          data-date="2018-10-15"
        >
          <span
            class="emotion-0"
            role="button"
          >
            15
          </span>
        </td>
        <td
          data-date="2018-10-16"
        >
          <span
            class="emotion-0"
            role="button"
          >
            16
          </span>
        </td>
        <td
          data-date="2018-10-17"
        >
          <span
            class="emotion-0"
            role="button"
          >
            17
          </span>
        </td>
        <td
          data-date="2018-10-18"
        >
          <span
            class="emotion-0"
            role="button"
          >
            18
          </span>
        </td>
        <td
          data-date="2018-10-19"
        >
          <span
            class="emotion-0"
            role="button"
          >
            19
          </span>
        </td>
        <td
          data-date="2018-10-20"
        >
          <span
            class="emotion-0"
            role="button"
          >
            20
          </span>
        </td>
      </tr>
      <tr>
        <td
          data-date="2018-10-21"
        >
          <span
            class="emotion-0"
            role="button"
          >
            21
          </span>
        </td>
        <td
          data-date="2018-10-22"
        >
          <span
            class="emotion-0"
            role="button"
          >
            22
          </span>
        </td>
        <td
          data-date="2018-10-23"
        >
          <span
            class="emotion-0"
            role="button"
          >
            23
          </span>
        </td>
        <td
          data-date="2018-10-24"
        >
          <span
            class="emotion-0"
            role="button"
          >
            24
          </span>
        </td>
        <td
          data-date="2018-10-25"
        >
          <span
            class="emotion-0"
            role="button"
          >
            25
          </span>
        </td>
        <td
          data-date="2018-10-26"
        >
          <span
            class="emotion-0"
            role="button"
          >
            26
          </span>
        </td>
        <td
          data-date="2018-10-27"
        >
          <span
            class="emotion-0"
            role="button"
          >
            27
          </span>
        </td>
      </tr>
      <tr>
        <td
          data-date="2018-10-28"
        >
          <span
            class="emotion-0"
            role="button"
          >
            28
          </span>
        </td>
        <td
          data-date="2018-10-29"
        >
          <span
            class="emotion-0"
            role="button"
          >
            29
          </span>
        </td>
        <td
          data-date="2018-10-30"
        >
          <span
            class="emotion-0"
            role="button"
          >
            30
          </span>
        </td>
        <td
          data-date="2018-10-31"
        >
          <span
            class="emotion-0"
            role="button"
          >
            31
          </span>
        </td>
        <td
          data-date="2018-11-01"
        >
          <span
            class="emotion-0"
            role="button"
          >
            01
          </span>
        </td>
        <td
          data-date="2018-11-02"
        >
          <span
            class="emotion-0"
            role="button"
          >
            02
          </span>
        </td>
        <td
          data-date="2018-11-03"
        >
          <span
            class="emotion-0"
            role="button"
          >
            03
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`should use createDateStyles function to create styles for days 1`] = `
.emotion-35 {
  border-collapse: separate;
  text-align: center;
  line-height: 1.5rem;
  width: 100%;
  border-spacing: 0 0.25rem;
}

.emotion-35 th {
  width: 2rem;
  padding: 0.25rem 0;
}

.emotion-35 tr td:first-child {
  border-top-left-radius: 10%;
  border-bottom-left-radius: 10%;
}

.emotion-35 tr td:last-child {
  border-top-right-radius: 10%;
  border-bottom-right-radius: 10%;
}

.emotion-0 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  color: red;
}

.emotion-0:hover {
  cursor: pointer;
  background: #F0F0F5;
}

<div>
  <table
    class="emotion-35"
  >
    <thead>
      <tr>
        <th>
          S
        </th>
        <th>
          M
        </th>
        <th>
          T
        </th>
        <th>
          W
        </th>
        <th>
          T
        </th>
        <th>
          F
        </th>
        <th>
          S
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          data-date="2018-09-30"
        >
          <span
            class="emotion-0"
            role="button"
          >
            30
          </span>
        </td>
        <td
          data-date="2018-10-01"
        >
          <span
            class="emotion-0"
            role="button"
          >
            01
          </span>
        </td>
        <td
          data-date="2018-10-02"
        >
          <span
            class="emotion-0"
            role="button"
          >
            02
          </span>
        </td>
        <td
          data-date="2018-10-03"
        >
          <span
            class="emotion-0"
            role="button"
          >
            03
          </span>
        </td>
        <td
          data-date="2018-10-04"
        >
          <span
            class="emotion-0"
            role="button"
          >
            04
          </span>
        </td>
        <td
          data-date="2018-10-05"
        >
          <span
            class="emotion-0"
            role="button"
          >
            05
          </span>
        </td>
        <td
          data-date="2018-10-06"
        >
          <span
            class="emotion-0"
            role="button"
          >
            06
          </span>
        </td>
      </tr>
      <tr>
        <td
          data-date="2018-10-07"
        >
          <span
            class="emotion-0"
            role="button"
          >
            07
          </span>
        </td>
        <td
          data-date="2018-10-08"
        >
          <span
            class="emotion-0"
            role="button"
          >
            08
          </span>
        </td>
        <td
          data-date="2018-10-09"
        >
          <span
            class="emotion-0"
            role="button"
          >
            09
          </span>
        </td>
        <td
          data-date="2018-10-10"
        >
          <span
            class="emotion-0"
            role="button"
          >
            10
          </span>
        </td>
        <td
          data-date="2018-10-11"
        >
          <span
            class="emotion-0"
            role="button"
          >
            11
          </span>
        </td>
        <td
          data-date="2018-10-12"
        >
          <span
            class="emotion-0"
            role="button"
          >
            12
          </span>
        </td>
        <td
          data-date="2018-10-13"
        >
          <span
            class="emotion-0"
            role="button"
          >
            13
          </span>
        </td>
      </tr>
      <tr>
        <td
          data-date="2018-10-14"
        >
          <span
            class="emotion-0"
            role="button"
          >
            14
          </span>
        </td>
        <td
          data-date="2018-10-15"
        >
          <span
            class="emotion-0"
            role="button"
          >
            15
          </span>
        </td>
        <td
          data-date="2018-10-16"
        >
          <span
            class="emotion-0"
            role="button"
          >
            16
          </span>
        </td>
        <td
          data-date="2018-10-17"
        >
          <span
            class="emotion-0"
            role="button"
          >
            17
          </span>
        </td>
        <td
          data-date="2018-10-18"
        >
          <span
            class="emotion-0"
            role="button"
          >
            18
          </span>
        </td>
        <td
          data-date="2018-10-19"
        >
          <span
            class="emotion-0"
            role="button"
          >
            19
          </span>
        </td>
        <td
          data-date="2018-10-20"
        >
          <span
            class="emotion-0"
            role="button"
          >
            20
          </span>
        </td>
      </tr>
      <tr>
        <td
          data-date="2018-10-21"
        >
          <span
            class="emotion-0"
            role="button"
          >
            21
          </span>
        </td>
        <td
          data-date="2018-10-22"
        >
          <span
            class="emotion-0"
            role="button"
          >
            22
          </span>
        </td>
        <td
          data-date="2018-10-23"
        >
          <span
            class="emotion-0"
            role="button"
          >
            23
          </span>
        </td>
        <td
          data-date="2018-10-24"
        >
          <span
            class="emotion-0"
            role="button"
          >
            24
          </span>
        </td>
        <td
          data-date="2018-10-25"
        >
          <span
            class="emotion-0"
            role="button"
          >
            25
          </span>
        </td>
        <td
          data-date="2018-10-26"
        >
          <span
            class="emotion-0"
            role="button"
          >
            26
          </span>
        </td>
        <td
          data-date="2018-10-27"
        >
          <span
            class="emotion-0"
            role="button"
          >
            27
          </span>
        </td>
      </tr>
      <tr>
        <td
          data-date="2018-10-28"
        >
          <span
            class="emotion-0"
            role="button"
          >
            28
          </span>
        </td>
        <td
          data-date="2018-10-29"
        >
          <span
            class="emotion-0"
            role="button"
          >
            29
          </span>
        </td>
        <td
          data-date="2018-10-30"
        >
          <span
            class="emotion-0"
            role="button"
          >
            30
          </span>
        </td>
        <td
          data-date="2018-10-31"
        >
          <span
            class="emotion-0"
            role="button"
          >
            31
          </span>
        </td>
        <td
          data-date="2018-11-01"
        >
          <span
            class="emotion-0"
            role="button"
          >
            01
          </span>
        </td>
        <td
          data-date="2018-11-02"
        >
          <span
            class="emotion-0"
            role="button"
          >
            02
          </span>
        </td>
        <td
          data-date="2018-11-03"
        >
          <span
            class="emotion-0"
            role="button"
          >
            03
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
